se modifico el subtitulo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             tal manera que logró hacer un libro de textos especimen.
         </p>
         <hr/>
-        <h2>Subtitulo de la pagina de prueba</h2>
+        <h2><i>Subtitulo de la pagina de prueba</i></h2>
         <p>
             <blockquote>No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno 
             en documentos electrónicos, quedando esencialmente igual al original. 
