--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <title>pagina de prueba</title>
+        <title>pagina de prueba para guit</title>
     </head>
     <body>
-        <h1>Dcoumento de prueba</h1>
+        <h1>Dcoumento de prueba para guit</h1>
         <p>
             Lorem Ipsum es simplemente el texto de relleno de las imprentas y 
             archivos de texto. <b>Lorem Ipsum</b> ha sido el texto de relleno estándar
