--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</blockquote>
             <cite>jesus alberto mtz</cite>
         </p>
+        <a href="https://www.google.com/"> ir a google</a>
+        <a href="imagen/logo1.png">ir a la imagen</a>
     </body>
 
 </html>
