--- a/index.html
+++ b/index.html
@@ -1,25 +1,20 @@
 <html>
-    <head>
-        <title>pagina de prueba para guit</title>
-    </head>
+
+<head>
+    <title>pagina de prueba para guit</title>
+    <link rel="stylesheet" type="text/css" href="css/estilos.css" </head>
+
     <body>
         <h1>Dcoumento de prueba para guit</h1>
         <p>
-            Lorem Ipsum es simplemente el texto de relleno de las imprentas y 
-            archivos de texto. <b>Lorem Ipsum</b> ha sido el texto de relleno estándar
-            de las industrias desde el año 1500, cuando un impresor 
-            <i>(N. del T. persona que se dedica a la imprenta)</i>
-            desconocido usó una galería de textos y los mezcló de 
-            tal manera que logró hacer un libro de textos especimen.
+            Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. <b>Lorem Ipsum</b> ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor
+            <i>(N. del T. persona que se dedica a la imprenta)</i> desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.
         </p>
         <hr/>
         <h2><i>Subtitulo de la pagina de prueba</i></h2>
         <p>
-            <blockquote>No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno 
-            en documentos electrónicos, quedando esencialmente igual al original. 
-            Fue popularizado en los 60s con la creación de las hojas "Letraset", 
-            las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, 
-            como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</blockquote>
+            <blockquote>No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes
+                de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</blockquote>
             <cite>jesus alberto mtz</cite>
         </p>
         <a href="https://www.google.com/"> ir a google</a>
